--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vue/tsconfig": "^0.7.0",
     "sass": "^1.89.0",
     "typescript": "~5.8.3",
+    "unocss": "^66.1.2",
     "unplugin-auto-import": "^19.2.0",
     "unplugin-vue-components": "^28.5.0",
     "vite": "^6.3.5",
