--- a/package.json
+++ b/package.json
@@ -16,15 +16,26 @@
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
+    "@eslint/js": "^9.28.0",
     "@types/node": "^22.15.18",
+    "@typescript-eslint/eslint-plugin": "^8.33.1",
+    "@typescript-eslint/parser": "^8.33.1",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.28.0",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-prettier": "^5.4.1",
+    "eslint-plugin-vue": "^10.1.0",
+    "globals": "^16.2.0",
+    "prettier": "^3.5.3",
     "sass": "^1.89.0",
+    "stylelint-prettier": "^5.0.3",
     "typescript": "~5.8.3",
     "unocss": "^66.1.2",
     "unplugin-auto-import": "^19.2.0",
     "unplugin-vue-components": "^28.5.0",
     "vite": "^6.3.5",
+    "vue-eslint-parser": "^10.1.3",
     "vue-tsc": "^2.2.8"
   }
 }
