--- a/package.json
+++ b/package.json
@@ -31,9 +31,14 @@
     ],
     "*.{vue,html}": [
       "eslint --fix",
-      "prettier --write"
+      "prettier --write",
+      "stylelint --fix"
     ],
     "*.md": [
+      "prettier --write"
+    ],
+    "*.{scss,css}": [
+      "stylelint --fix",
       "prettier --write"
     ]
   },
@@ -62,8 +67,16 @@
     "globals": "^16.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
+    "postcss": "^8.5.6",
+    "postcss-html": "^1.8.0",
+    "postcss-scss": "^4.0.9",
     "prettier": "^3.5.3",
     "sass": "^1.89.0",
+    "stylelint": "^16.20.0",
+    "stylelint-config-recess-order": "^7.1.0",
+    "stylelint-config-recommended": "^16.0.0",
+    "stylelint-config-recommended-scss": "^15.0.1",
+    "stylelint-config-recommended-vue": "^1.6.0",
     "stylelint-prettier": "^5.0.3",
     "typescript": "~5.8.3",
     "unocss": "^66.1.2",
