--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@commitlint/cli": "^19.8.1",
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.28.0",
+    "@iconify/utils": "^2.3.0",
     "@types/node": "^22.15.18",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
