--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,8 @@
     "paths": {
       "@/*": ["src/*"]
     },
+    // 类型声明
+    "types": ["vite/client", "element-plus/global"],
 
     /* Linting */
     "strict": true,
