--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.9.0",
     "element-plus": "^2.9.10",
+    "nprogress": "^0.2.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.12",
@@ -57,6 +58,7 @@
     "@eslint/js": "^9.28.0",
     "@iconify/utils": "^2.3.0",
     "@types/node": "^22.15.18",
+    "@types/nprogress": "^0.2.3",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "@vitejs/plugin-vue": "^5.2.3",
