feat: :sparkles: 侧边栏

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "axios": "^1.9.0",
     "element-plus": "^2.9.10",
     "nprogress": "^0.2.0",
+    "path-browserify": "^1.0.1",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.12",
@@ -59,6 +60,7 @@
     "@iconify/utils": "^2.3.0",
     "@types/node": "^22.15.18",
     "@types/nprogress": "^0.2.3",
+    "@types/path-browserify": "^1.0.3",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "@vitejs/plugin-vue": "^5.2.3",
