--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "element-plus": "^2.9.10",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
+    "path-to-regexp": "^8.3.0",
     "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.12",
