--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^8.3.0",
     "pinia": "^3.0.2",
+    "qs": "^6.14.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.12",
     "vue-router": "^4.5.1"
@@ -62,6 +63,7 @@
     "@types/node": "^22.15.18",
     "@types/nprogress": "^0.2.3",
     "@types/path-browserify": "^1.0.3",
+    "@types/qs": "^6.14.0",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
     "@vitejs/plugin-vue": "^5.2.3",
