--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.2",
     "axios": "^1.9.0",
+    "echarts": "^6.0.0",
     "element-plus": "^2.9.10",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
