--- a/package.json
+++ b/package.json
@@ -54,7 +54,8 @@
     "qs": "^6.14.0",
     "vue": "^3.5.13",
     "vue-i18n": "^11.1.12",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-virtual-scroller": "^0.2.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.1",
